# Wasm-MTR3

./: README.md
apps/: hello_world.wasm  indirect_wali_basic.wasm  malloc.wasm  malloc_single.wasm  read.wasm  thread.wasm  write.wasm
r3/: .gitignore  Cargo.toml  README.md  build.rs  record_and_replay.sh
r3/common/: Cargo.toml
r3/common/src/: instrument.rs  lib.rs  opcodes.rs  trace.rs  wasm2native.rs
r3/record/: Cargo.toml
r3/record/src/: deserialize.rs  main.rs  record.rs  record_interface.rs  tracer.rs
r3/reduce/: Cargo.toml
r3/replay/: Cargo.toml
r3/replay/src/: generator.rs  parser.rs  replay.rs  structs.rs
r3/runner/: Cargo.toml
r3/runner/src/: interface.rs  main.rs  runner.rs  runner_interface.rs
r3/src/: instrument.rs  main.rs  tracer.rs
