[package]
name = "main"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
cmake = "0.1.50"
env_logger = "0.11.3"
libc = "0.2.153"
log = "0.4.21"
postcard = { version = "1.0.8", features = ["use-std"] }
serde = "1.0.204"
wamr-rust-sdk = { git = "https://github.com/arjunr2/wamr-rust-sdk.git" }
#wamr-rust-sdk = { path = "../../wamr-rust-sdk" }

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"
