[workspace]
members = ["record", "reduce", "replay", "common", "runner"]
resolver = "2"

[workspace.package]
authors = ["Arjun Ramesh <arjunr2@andrew.cmu.edu>"]
version = "0.1.0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.3"
libc = "0.2.153"
log = "0.4.21"
postcard = { version = "1.0.8", features = ["use-std"] }
serde = "1.0.204"
sha256 = "1.5.0"
nix = { version = "0.29.0", features = ["process"] }
wamr-rust-sdk = { git = "https://github.com/arjunr2/wamr-rust-sdk.git" }
#wamr-rust-sdk = { path = "../../wamr-rust-sdk" }

#[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"
