[package]
name = "common"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
build = "../build.rs"

[dependencies]
libc.workspace = true
log.workspace = true
serde.workspace = true
postcard.workspace = true
wamr-rust-sdk.workspace = true

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
