[package]
name = "record"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
build = "../build.rs"

[dependencies]
clap.workspace = true
env_logger.workspace = true
libc.workspace = true
log.workspace = true
postcard.workspace = true
serde.workspace = true
wamr-rust-sdk.workspace = true
common = { path = "../common" }

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
