[package]
name = "record"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
path = "src/record.rs"
name = "record"

[dependencies]
clap.workspace = true
env_logger.workspace = true
libc.workspace = true
log.workspace = true
wamr-rust-sdk.workspace = true
sha256.workspace = true
common = { path = "../common" }

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
