[package]
name = "record"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
path = "src/record.rs"
name = "record"

[[bin]]
path = "src/deserialize.rs"
name = "deserialize"

[dependencies]
clap.workspace = true
env_logger.workspace = true
libc.workspace = true
log.workspace = true
wamr-rust-sdk.workspace = true
sha256.workspace = true
nix.workspace = true
postcard.workspace = true
common.workspace = true
tempfile = "3.12.0"
uuid = { version = "1.10.0", features = ["v4"] }
once_cell = "1.19.0"

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
