[package]
name = "runner"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
env_logger.workspace = true
libc.workspace = true
log.workspace = true
postcard.workspace = true
nix.workspace = true
wamr-rust-sdk.workspace = true
common = { path = "../common" }
